force-app/main/default/objects/HM_Dashboard__c/HM_Dashboard__c.object-meta.xml
<CustomObject>
    <description>Top-level container for dashboard configurations</description>
    <label>Dashboard</label>
    <nameField>
        <label>Dashboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>