force-app/main/default/objects/HM_Dashboard__c/fields/HM_Active__c.field-meta.xml
<CustomField>
    <fullName>HM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this box to make the dashboard available for use. Uncheck to hide the dashboard without deleting it.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>