force-app/main/default/objects/HM_Dashboard__c/fields/HM_Custom_Actions_Configuration__c.field-meta.xml
<CustomField>
    <fullName>HM_Custom_Actions_Configuration__c</fullName>
    <inlineHelpText>Optional JSON array of custom actions. Only used when standard actions aren&apos;t sufficient. Format: [{&quot;label&quot;: &quot;Action Name&quot;, &quot;icon&quot;: &quot;utility:iconname&quot;, &quot;type&quot;: &quot;navigation&quot;, &quot;target&quot;: {&quot;objectApiName&quot;: &quot;ObjectName&quot;, &quot;actionName&quot;: &quot;new&quot;}}]</inlineHelpText>
    <label>Custom Actions Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>