force-app/main/default/objects/HM_Dashboard__c/fields/HM_Default_Dark_Mode__c.field-meta.xml
<CustomField>
    <fullName>HM_Default_Dark_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled, the dashboard will load in dark mode by default. Users can still toggle dark mode using the actions menu.</inlineHelpText>
    <label>Default Dark Mode</label>
    <type>Checkbox</type>
</CustomField>