force-app/main/default/objects/HM_Dashboard__c/fields/HM_Description__c.field-meta.xml
<CustomField>
    <fullName>HM_Description__c</fullName>
    <inlineHelpText>Brief description of this dashboard and its purpose. This helps identify the dashboard when managing multiple dashboards.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>