force-app/main/default/objects/HM_Dashboard__c/fields/HM_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>HM_Display_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Numeric order for displaying this dashboard when multiple dashboards are available. Lower numbers appear first. Leave blank to use alphabetical order by name.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>