force-app/main/default/objects/HM_Dashboard__c/fields/HM_Enable_Dark_Mode__c.field-meta.xml
<CustomField>
    <fullName>HM_Enable_Dark_Mode__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When enabled, allows users to toggle dark mode. When disabled, dark mode is not available and the dashboard will always use light mode, regardless of the default setting.</inlineHelpText>
    <label>Enable Dark Mode</label>
    <type>Checkbox</type>
</CustomField>