force-app/main/default/objects/HM_Dashboard__c/fields/HM_Show_Actions_Menu__c.field-meta.xml
<CustomField>
    <fullName>HM_Show_Actions_Menu__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When enabled, displays the actions dropdown menu in the dashboard header.</inlineHelpText>
    <label>Show Actions Menu</label>
    <type>Checkbox</type>
</CustomField>