force-app/main/default/objects/HM_Dashboard__c/fields/HM_Show_New_Account_Action__c.field-meta.xml
<CustomField>
    <fullName>HM_Show_New_Account_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled, shows &quot;Add New Account&quot; action in the actions dropdown menu.</inlineHelpText>
    <label>Show New Account Action</label>
    <type>Checkbox</type>
</CustomField>