force-app/main/default/objects/HM_Dashboard__c/fields/HM_Show_Schedule_Meeting_Action__c.field-meta.xml
<CustomField>
    <fullName>HM_Show_Schedule_Meeting_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled, shows &quot;Schedule Meeting&quot; action in the actions dropdown menu.</inlineHelpText>
    <label>Show Schedule Meeting Action</label>
    <type>Checkbox</type>
</CustomField>